Fix for clipping on wide browsers at high resolution

--- a/src/Chart.css
+++ b/src/Chart.css
@@ -11,7 +11,7 @@
     width: 100%;
     align-self: flex-start;
     justify-self: center;
-    max-width: 600px;
+    max-width: 667px;
 }
 
 @media (min-width: 930px) {
